WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299991
ASSERT in RenderTreeNeedsLayoutChecker when orthogonal table cell has rowspan
https://bugs.webkit.org/show_bug.cgi?id=299991
Summary
ASSERT in RenderTreeNeedsLayoutChecker when orthogonal table cell has rowspan
alan
Reported
2025-10-01 16:52:44 PDT
<
rdar://160116994
>
Attachments
[fast-cq]Patch
(4.65 KB, patch)
2025-10-01 17:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-10-01 17:29:35 PDT
Created
attachment 476932
[details]
[fast-cq]Patch
EWS
Comment 2
2025-10-02 08:28:13 PDT
Committed
300879@main
(43d9ae9cf94b): <
https://commits.webkit.org/300879@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 476932
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug