ASSERT in RenderTreeNeedsLayoutChecker when orthogonal table cell has rowspan https://bugs.webkit.org/show_bug.cgi?id=299991

Reviewed by Antti Koivisto.

RenderTableCell::setCellLogicalWidth marks both the cell and its row as dirty, assuming the caller will handle the row layout via RenderTableSection::layout.
However, the caller only lays out the grid's current row, which -due to row spanning- may differ from cell.row(), the row where the cell was originally created.

Test: fast/table/orthogonal-td-with-rowspan-crash.html

* LayoutTests/fast/table/orthogonal-td-with-rowspan-crash-expected.txt: Added.
* LayoutTests/fast/table/orthogonal-td-with-rowspan-crash.html: Added.
* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::setCellLogicalWidth):
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::layout):

Canonical link: https://commits.webkit.org/300879@main